logs/linecache2_build.log
Package search: {'_pypi_ordering': False, 'version': '1.0.0', 'name': 'linecache2', 'summary': 'Backports of the linecache module'}
Fetching package metadata: ....
Fetching package metadata: ....
Solving package specifications: .
Package plan for installation in environment /home/ubuntu/miniconda/envs/_pipbuild_:

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        7.0.1-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
#
# To activate this environment, use:
# $ source activate _pipbuild_
#
# To deactivate this environment, use:
# $ source deactivate
#
You are using pip version 7.0.1, however version 7.0.3 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Collecting linecache2==1.0.0
  Downloading http://localhost/packages/3.5/l/linecache2/linecache2-1.0.0-py2.py3-none-any.whl
Installing collected packages: linecache2
Successfully installed linecache2-1.0.0
Fetching package metadata: ....

Package plan for package removal in environment /home/ubuntu/miniconda/envs/_pipbuild_:

The following packages will be REMOVED:

    openssl:    1.0.1k-1    
    pip:        7.0.1-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Unlinking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[pip                 ]|#####                                             |  11%[python              ]|###########                                       |  22%[readline            ]|################                                  |  33%[setuptools          ]|######################                            |  44%[sqlite              ]|###########################                       |  55%[system              ]|#################################                 |  66%[tk                  ]|######################################            |  77%[zlib                ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old build directory
Removing old work directory
BUILD START: linecache2-1.0.0-py27_0
Fetching package metadata: ......
Solving package specifications: .+ pip install linecache2==1.0.0
You are using pip version 7.0.1, however version 7.0.3 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Collecting linecache2==1.0.0
  Downloading http://localhost/packages/3.5/l/linecache2/linecache2-1.0.0-py2.py3-none-any.whl
Installing collected packages: linecache2
Successfully installed linecache2-1.0.0
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py", line 102
    def keyworded(*arg1, arg2=1):
                            ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        7.0.1-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/linecache2-1.0.0 to /home/ubuntu/miniconda/conda-bld/work
Package: linecache2-1.0.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Creating standard recipe for linecache2-1.0.0
Error: directory already exists: ./linecache2

conda create -n _pipbuild_ --yes python pip
/home/ubuntu/miniconda/envs/_pipbuild_/bin/pip install linecache2==1.0.0
Getting dependencies...
package = linecache2
   dependencies = []
Building conda package for linecache2
